[package]
name = "cymrust"
version = "0.5.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
edition = "2021"

description = "Query Team Cymru's IP-to-ASN mapping via DNS"
keywords = [ "ip", "network", "bgp", "resolver", "cymru" ]
categories = [ "api-bindings" ]
homepage = "https://github.com/HowNetWorks/cymrust#readme"
repository = "https://github.com/HowNetWorks/cymrust"
documentation = "https://docs.rs/cymrust/"
readme = "README.md"

license = "MIT"

exclude = [ ".gitignore" ]

[dependencies]
chrono = "0.4"
trust-dns-resolver = "0.23"
